- use UUID for resume= kernel parameter
- handle new drivers:
  o pata: pata_sch 
- kernel-laptop is no more

Version 10.30 - 23 April 2008

- /sbin/usb_id is needed by mouse.pm to generate /dev/input/by-id/xxx (#39868)
  (and not /LIB/udev/usb_id since drakx-kbd-mouse-x11 0.42)
- list generic module in disk/ide

Version 10.29 - 3 April 2008

- time: write UTC setting in /etc/adjtime (#36522)

Version 10.28 - 3 April 2008

- fix computed install size in group selection (#39303)
  (it didn't take suggests into account)

Version 10.27 - 3 April 2008

- 2008.1 logo (the good one)
- enable to restore the system through rsnapshot if giving "restore"
  on cmdline
- fix broken help because of s/pt_BR/pt_br/ change in file names (#36774)

Version 10.26 - 2 April 2008

- 2008.1 logo
- fix crash when detecting network connection with supplementary media

Version 10.23 - 31 March 2008

- ensure umount on loopback-mounted-file doesn't leak /dev/loop
  (otherwise it breaks install from isos on disk) (#36992)
- warn the user and propose to install/quit-install before upgrading from a
  partition where "/" is ext3 with block-size 1KB to avoid kernel bug (#37583)
- detect as laptop systems with ACPI lid button
  (i.e. if /sys/bus/acpi/devices/PNP0C0D:* exists)
- fix computing time according to timezone in local/UTC dialog
  (by using zoneinfo files from the installed prefix)

Version 10.21 - 25 March 2008

- partitioning wizard: allow "Use free space" if there is an extended
  partition even if all primary partitions are used (#38804)
  (*old* bug!)
- fix errors while setting PA preferences (#39270)
- use umask=0 by default on vfat (#39315)
- root/user password:
  o force the password to be utf8 (#23273)

Version 10.19 - 21 March 2008

- diskdrake:
  o fix setting mount point of a /dev/mdX (#39142)
    (regression introduced in 10.8)
- when skipping bootloader installation, correctly say "None" in summary 
  (#39101)
- correctly set country when given lang=xxx on /proc/cmdline