@@ -121,9 +121,10 @@ sub partitionWizardSolutions {
     }
 
     
-    if (my @ok_for_resize_fat = grep { isFat_or_NTFS($_) && !fs::get::part2hd($_, $all_hds)->{readonly} } @$fstab) {
+    if (my @ok_for_resize_fat = grep { isFat_or_NTFS($_) && !fs::get::part2hd($_, $all_hds)->{readonly}
+					 && fs::type::part2type_name($_) !~ /^Hidden/ } @$fstab) {
 	$solutions{resize_fat} = 
-	  [ 20 - @ok_for_resize_fat, N("Use the free space on the Microsoft Windows® partition"),
+	  [ 20 - @ok_for_resize_fat, N("Use the free space on a Microsoft Windows® partition"),
 	    sub {
 		my $part = $in->ask_from_listf_raw({ messages => N("Which partition do you want to resize?"),
 						    interactive_help_id => 'resizeFATChoose',
