@@ -1,3 +1,6 @@
+- partitioning wizard:
+  o do not propose to resize "hidden" fat partitions
+  o do not say "the Windows partition" when there can be more than one
 - use UUID for resume= kernel parameter
 - handle new drivers:
   o pata: pata_sch 
